P4 3097 bulk price adjustment feature (#332)
* P4-3097 small refactoring of link name to be consistent with rest of application.

* P4-3097 initial new (empty) page for the annual price adjustment.

* P4-3097 small refactoring pulling out some template duplication for contractual year.

* P4-3097 fleshing out the underlying template for price adjustments.  Controller changes to follow.

* P4-3097 beginnings to flesh out the adjustment rate submission.

* P4-3097 wiring in calls to service layer for bulk adjustments and extending test coverage.

* P4-3097 remvoving use of co-routines and replacing with simple background runner.  Co-routines requires a bit wiring to be done with Spring Boot for it to work.

* P4-3097 updates to pass though user name for auditing purposes.

* P4-3097 add placeholder for 'details' field and correcting the effective year for the adjusment to be applied.

--- a/src/main/resources/templates/manage-journey-price-catalogue.html
+++ b/src/main/resources/templates/manage-journey-price-catalogue.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="~{layout/base}">
+<html
+  lang="en"
+  xmlns:th="http://www.thymeleaf.org"
+  xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorate="~{layout/base}">
 
 <head>
   <title>Calculate Journey Variable Payments - GOV.UK</title>
@@ -10,11 +14,7 @@
 <body>
 
 <div class="govuk-width-container" layout:fragment="content">
-  <div class="mv4">
-    <h1 class="govuk-heading-xl mv2" th:inline="text">
-      Manage Journey Price Catalogue [[${contractualYearStart}]] to [[${contractualYearEnd}]]
-    </h1>
-  </div>
+  <div th:insert="fragments/contractual-year.html :: contractualYear"></div>
 
   <table class="govuk-table">
     <thead class="govuk-table__head">
@@ -26,9 +26,16 @@
     <tr class="govuk-table__row">
       <td class="govuk-table__cell" scope="row">
         <a href="/search-journeys" class="govuk-heading-s govuk-link--no-visited-state">Find journeys</a>
-        Search and edit individual journey prices
+        Search and edit individual journey prices.
       </td>
     </tr>
+    <div sec:authorize="hasRole('ROLE_PECS_MAINTAIN_PRICE')">
+      <tr class="govuk-table__row">
+        <td class="govuk-table__cell" scope="row">
+          <a href="/annual-price-adjustment" class="govuk-heading-s govuk-link--no-visited-state">Apply bulk price adjustment</a>
+          Make pricing adjustments to the entire catalogue.
+        </td>
+    </div>
     </tbody>
   </table>
 </div>
