P4-3122 change to only allow price adjustments for current active effective and above, otherwise just displays the adjustment history.

--- a/src/main/resources/templates/annual-price-adjustment.html
+++ b/src/main/resources/templates/annual-price-adjustment.html
@@ -82,7 +82,7 @@
       </form>
     </div>
     <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="price-adjustment-history">
-      <h2 class="govuk-heading-l">Price history</h2>
+      <h2 class="govuk-heading-l">Price adjustment history</h2>
       <table class="govuk-table">
         <thead class="govuk-table__head">
         <tr class="govuk-table__row">
