P4-3006 changes to resolve the highlighting of main menu navigation bar as the user navigates around the application.
P4-3006 fixing typo added by mistake.

--- a/src/main/resources/templates/layout/base.html
+++ b/src/main/resources/templates/layout/base.html
@@ -2,134 +2,137 @@
 <html lang="en" class="govuk-template " xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
-    <head>
-        <title>Calculate Journey Variable Payments - GOV.UK</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-        <!--[if !IE 8]><!-->
-        <link rel="stylesheet" th:href="@{/govuk-frontend-3.9.1.min.css}">
-        <link rel="stylesheet" th:href="@{/style.css}">
-        <!--<![endif]-->
-        <!--[if IE 8]>
-        <link rel="stylesheet" th:href="@{/govuk-frontend-ie8-3.9.1.min.css}">
-        <![endif]-->
-    </head>
+<head>
+  <title>Calculate Journey Variable Payments - GOV.UK</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <!--[if !IE 8]><!-->
+  <link rel="stylesheet" th:href="@{/govuk-frontend-3.9.1.min.css}">
+  <link rel="stylesheet" th:href="@{/style.css}">
+  <!--<![endif]-->
+  <!--[if IE 8]>
+  <link rel="stylesheet" th:href="@{/govuk-frontend-ie8-3.9.1.min.css}">
+  <![endif]-->
+</head>
 
-    <body class="govuk-template__body ">
-        <script>
-        document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');
+<body class="govuk-template__body ">
+<script>
+  document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');
 
-        </script>
+</script>
 
-        <div th:replace="fragments/header.html :: header"></div>
+<div th:replace="fragments/header.html :: header"></div>
 
-        <div class="moj-primary-navigation">
-            <div class="moj-primary-navigation__container">
-                <div class="moj-primary-navigation__nav">
-                    <nav class="moj-primary-navigation" aria-label="Primary navigation">
-                        <ul class="moj-primary-navigation__list">
-                            <li class="moj-primary-navigation__item">
-                                <a class="moj-primary-navigation__link" href="/dashboard" aria-current="page">Move summary</a>
-                            </li>
-                            <li class="moj-primary-navigation__item">
-                                <a class="moj-primary-navigation__link" href="/manage-journey-price-catalogue">Manage Journey Price Catalogue</a>
-                            </li>
-                            <li class="moj-primary-navigation__item">
-                                <a class="moj-primary-navigation__link" href="/search-locations">Manage Locations</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-        </div>
+<div class="moj-primary-navigation">
+  <div class="moj-primary-navigation__container">
+    <div class="moj-primary-navigation__nav">
+      <nav class="moj-primary-navigation" aria-label="Primary navigation">
+        <ul class="moj-primary-navigation__list">
+          <li class="moj-primary-navigation__item">
+            <a th:if="${navigation == 'SUMMARY'}" class="moj-primary-navigation__link" href="/dashboard" aria-current="page">Move summary</a>
+            <a th:if="${navigation != 'SUMMARY'}" class="moj-primary-navigation__link" href="/dashboard" >Move summary</a>
+          </li>
+          <li class="moj-primary-navigation__item">
+            <a th:if="${navigation == 'PRICE'}" class="moj-primary-navigation__link" href="/manage-journey-price-catalogue" aria-current="page">Manage Journey Price Catalogue</a>
+            <a th:if="${navigation != 'PRICE'}" class="moj-primary-navigation__link" href="/manage-journey-price-catalogue">Manage Journey Price Catalogue</a>
+          </li>
+          <li class="moj-primary-navigation__item">
+            <a th:if="${navigation == 'LOCATION'}"class="moj-primary-navigation__link" href="/search-locations" aria-current="page">Manage Locations</a>
+            <a th:if="${navigation != 'LOCATION'}" class="moj-primary-navigation__link" href="/search-locations">Manage Locations</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+</div>
 
-        <div class="govuk-width-container bb pv2">
-            <div class="flex justify-between items-center">
-                <p class="govuk-link govuk-heading-s ma0" th:inline="text">[[${supplier}]]</p>
-                <a href="/choose-supplier" class="govuk-link">Switch supplier</a>
-            </div>
-        </div>
+<div class="govuk-width-container bb pv2">
+  <div class="flex justify-between items-center">
+    <p class="govuk-link govuk-heading-s ma0" th:inline="text">[[${supplier}]]</p>
+    <a href="/choose-supplier" class="govuk-link">Switch supplier</a>
+  </div>
+</div>
 
-        <div
-          id="application-info"
-          class="govuk-width-container mt3"
-          style="display:none;">
-          <div
-            class="govuk-notification-banner"
-            role="region"
-            aria-labelledby="govuk-notification-banner-title"
-            data-module="govuk-notification-banner">
-            <div class="govuk-notification-banner__header">
-              <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
-                Important
-              </h2>
-            </div>
-            <div class="govuk-notification-banner__content">
-              <p id="application-message" class="govuk-notification-banner__heading"></p>
-            </div>
-          </div>
-        </div>
+<div
+  id="application-info"
+  class="govuk-width-container mt3"
+  style="display:none;">
+  <div
+    class="govuk-notification-banner"
+    role="region"
+    aria-labelledby="govuk-notification-banner-title"
+    data-module="govuk-notification-banner">
+    <div class="govuk-notification-banner__header">
+      <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
+        Important
+      </h2>
+    </div>
+    <div class="govuk-notification-banner__content">
+      <p id="application-message" class="govuk-notification-banner__heading"></p>
+    </div>
+  </div>
+</div>
 
-        <div layout:fragment="content"></div>
+<div layout:fragment="content"></div>
 
-        <div class="govuk-width-container app-feedback-prompt">
-          <div class="app-feedback-prompt__content">
-            <p>Help us improve this service — <a th:href="${feedbackUrl}" th:target="${feedbackUrl=='#' ? '_self' : '_blank'}" rel="noopener noreferrer">give us your feedback</a></p>
-          </div>
-        </div>
+<div class="govuk-width-container app-feedback-prompt">
+  <div class="app-feedback-prompt__content">
+    <p>Help us improve this service — <a th:href="${feedbackUrl}" th:target="${feedbackUrl=='#' ? '_self' : '_blank'}" rel="noopener noreferrer">give us your feedback</a></p>
+  </div>
+</div>
 
-        <footer class="govuk-footer mt4 " role="contentinfo">
-            <div class="govuk-width-container ">
-                <div class="govuk-footer__meta">
-                    <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
+<footer class="govuk-footer mt4 " role="contentinfo">
+  <div class="govuk-width-container ">
+    <div class="govuk-footer__meta">
+      <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
 
-                        <svg aria-hidden="true" focusable="false" class="govuk-footer__licence-logo"
-                             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 483.2 195.7" height="17" width="41">
-                            <path fill="currentColor"
-                                  d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"/>
-                        </svg>
-                        <span class="govuk-footer__licence-description">
+        <svg aria-hidden="true" focusable="false" class="govuk-footer__licence-logo"
+             xmlns="http://www.w3.org/2000/svg" viewBox="0 0 483.2 195.7" height="17" width="41">
+          <path fill="currentColor"
+                d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"/>
+        </svg>
+        <span class="govuk-footer__licence-description">
                             All content is available under the
                             <a class="govuk-footer__link"
                                href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
                                rel="license">Open Government Licence v3.0</a>, except where otherwise stated
                         </span>
-                    </div>
-                    <div class="govuk-footer__meta-item">
-                        <a class="govuk-footer__link govuk-footer__copyright-logo"
-                           href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/">
-                            © Crown copyright
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </footer>
+      </div>
+      <div class="govuk-footer__meta-item">
+        <a class="govuk-footer__link govuk-footer__copyright-logo"
+           href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/">
+          © Crown copyright
+        </a>
+      </div>
+    </div>
+  </div>
+</footer>
 
-        <script src="/govuk-frontend-3.9.1.min.js"></script>
-        <script>
-        window.GOVUKFrontend.initAll()
+<script src="/govuk-frontend-3.9.1.min.js"></script>
+<script>
+  window.GOVUKFrontend.initAll()
 
-        </script>
+</script>
 
-        <script>
-          function checkAndShowAppInfo(message){
-            if (!message) {
-              document.getElementById("application-info").style.display = 'none'
-              document.getElementById("application-message").textContent = ''
-              return
-            }
+<script>
+  function checkAndShowAppInfo(message){
+    if (!message) {
+      document.getElementById("application-info").style.display = 'none'
+      document.getElementById("application-message").textContent = ''
+      return
+    }
 
-            document.getElementById("application-message").textContent = message
-            document.getElementById("application-info").style.display = 'block'
-          }
+    document.getElementById("application-message").textContent = message
+    document.getElementById("application-info").style.display = 'block'
+  }
 
-          const appInfoRequest = new XMLHttpRequest()
+  const appInfoRequest = new XMLHttpRequest()
 
-          appInfoRequest.addEventListener('load', function () {
-            checkAndShowAppInfo(JSON.parse(this.responseText)['message'])
-          })
+  appInfoRequest.addEventListener('load', function () {
+    checkAndShowAppInfo(JSON.parse(this.responseText)['message'])
+  })
 
-          appInfoRequest.open('GET', '/app/info');
-          appInfoRequest.send();
-        </script>
-    </body>
+  appInfoRequest.open('GET', '/app/info');
+  appInfoRequest.send();
+</script>
+</body>
 </html>
