--- a/src/main/resources/templates/journeys.html
+++ b/src/main/resources/templates/journeys.html
@@ -63,7 +63,7 @@
     </div>
 
     <section class="mt3">
-        <table class="govuk-table" th:fragment="journey-table">
+        <table id="journeys" class="govuk-table" th:fragment="journey-table">
             <thead class="govuk-table__head">
                 <tr class="govuk-table__row">
                     <th class="govuk-table__header" scope="col" aria-sort="none">Pick up</th>
