--- a/src/main/resources/templates/update-price.html
+++ b/src/main/resources/templates/update-price.html
@@ -124,7 +124,10 @@
     </div>
 
     <div class="govuk-tabs__panel govuk-tabs__panel--hidden" id="price-exceptions" th:if="${priceExceptionFeatureEnabled}">
-      <h2 class="govuk-heading-l">Price exceptions</h2>
+      <div>
+        <h2 class="govuk-heading-l">Price exceptions</h2>
+        <p class="govuk-heading-s govuk-body govuk-!-font-weight-regular">Add an agreed price exception more or less to that of the yearly amount.</p>
+      </div>
       <form th:action="@{/add-price-exception}" th:object="${exceptionsForm}" method="post">
         <div class="govuk-error-summary mv3" aria-labelledby="error-summary-title" role="alert" tabindex="-1"
              data-module="govuk-error-summary" th:if="${flashError == 'add-price-exception-error'}">
