P4-3209 tweaks to the UI layout and navigation for price exceptions on the back of feedback.

--- a/src/main/resources/templates/fragments/flash-messages.html
+++ b/src/main/resources/templates/fragments/flash-messages.html
@@ -45,7 +45,7 @@
                 Price exception added
               </p>
               <p class="govuk-body ma0" id="app-message__heading" th:inline="text">
-                Journey from [[${flashAttrLocationFrom}]] to [[${flashAttrLocationTo}]] for [[${flashAttrExceptionMonth}]] priced at £[[${flashAttrExceptionPrice}]]
+                Price exception of £[[${flashAttrExceptionPrice}]] for [[${flashAttrExceptionMonth}]] 2020 added for journey from [[${flashAttrLocationFrom}]] to [[${flashAttrLocationTo}]]
               </p>
             </div>
             <div th:case="*"></div>
