--- a/src/main/resources/templates/fragments/contractual-year.html
+++ b/src/main/resources/templates/fragments/contractual-year.html
@@ -1,5 +1,5 @@
 <div th:fragment="contractualYear" class="mv4">
-  <h1 class="govuk-heading-xl mv2" th:inline="text">
+  <h1 class="govuk-heading-l mv2" th:inline="text">
     Manage Journey Price Catalogue [[${contractualYearStart}]] to [[${contractualYearEnd}]]
   </h1>
 </div>
