--- a/src/main/resources/templates/add-price.html
+++ b/src/main/resources/templates/add-price.html
@@ -11,6 +11,8 @@
 
 <div class="govuk-width-container" layout:fragment="content">
 
+  <div th:insert="fragments/contractual-year.html :: contractualYear"></div>
+
     <form th:action="@{/add-price}" th:object="${form}" method="post">
         <div class="govuk-error-summary mv3" aria-labelledby="error-summary-title" role="alert" tabindex="-1"
              data-module="govuk-error-summary" th:if="${#fields.hasErrors('price')}">
