P4-3211 small UI tidy ups.

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -250,6 +250,11 @@
   margin-left: 16em;
   margin-right: 16em;
 }
+
+/* Alignement */
+.vam {
+  vertical-align: middle;
+}
 /* </Spacing> */
 
 /* <borders> */
