--- a/src/main/resources/templates/fragments/flash-messages.html
+++ b/src/main/resources/templates/fragments/flash-messages.html
@@ -50,7 +50,7 @@
             </div>
           <div th:case="'price-exception-removed'">
             <p class="govuk-heading-m govuk-!-font-weight-bold ma0">
-              Price exception added
+              Price exception removed
             </p>
             <p class="govuk-body ma0" id="app-message__heading" th:inline="text">
               Price exception for [[${flashAttrExceptionMonth}]] removed for journey from [[${flashAttrLocationFrom}]] to [[${flashAttrLocationTo}]]
