--- a/src/main/resources/templates/update-price.html
+++ b/src/main/resources/templates/update-price.html
@@ -149,7 +149,7 @@
                 <form th:action="@{/remove-price-exception}" method="post">
                   <input type="hidden" th:name="moveId" th:value="${moveId}" class="dn"/>
                   <input type="hidden" th:name="month" th:value="${exception.value}" class="dn"/>
-                  <button id="remove-exception" class="govuk-button govuk-button--secondary mv0 mr0" data-module="govuk-button">Remove</button>
+                  <button th:id="'remove-exception-' + ${exception.value}" class="govuk-button govuk-button--secondary mv0 mr0" data-module="govuk-button">Remove</button>
                 </form>
               </td>
             </tr>
