P4-3223 change to prevent adding a price when the selected year is out of range.

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -11,6 +11,8 @@
 
 <div class="govuk-width-container" layout:fragment="content">
 
+  <div th:replace="fragments/flash-messages.html :: flash-messages(dismissFallback='/dashboard')"></div>
+
     <h1 id="month-year-heading" class="govuk-heading-xl mv2" th:inline="text">[[${#temporals.monthName(startOfMonthDate)}]]
         [[${#temporals.format(startOfMonthDate, 'yyyy')}]]</h1>
 
